@@ -1,3 +1,8 @@
+2018-12-09  KAWANO Toshihiko  <kawano@lanl.gov>
+
+	* tools/decephoto.cpp: new file
+	new tool to produced photo-reaction cross section added
+
 2018-10-25  Toshihiko Kawano  <kawano@lanl.gov>
 
 	* source/decetable2.cpp (DeceTableMF2URA): bug fixed
